[gd_scene load_steps=18 format=2]

[ext_resource path="res://addons/MapEditorDock/SignalSender.gd" type="Script" id=1]
[ext_resource path="res://Maps/assets/concrete.png" type="Texture" id=2]
[ext_resource path="res://Maps/assets/metal.png" type="Texture" id=3]
[ext_resource path="res://Maps/assets/bricks.png" type="Texture" id=4]
[ext_resource path="res://Maps/assets/stone.png" type="Texture" id=5]
[ext_resource path="res://addons/MapEditorDock/DockButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Maps/assets/roof1.png" type="Texture" id=7]
[ext_resource path="res://Maps/assets/roof3.png" type="Texture" id=8]
[ext_resource path="res://Maps/assets/roof2.png" type="Texture" id=9]
[ext_resource path="res://Maps/assets/roof4.png" type="Texture" id=10]
[ext_resource path="res://Maps/assets/roof5.png" type="Texture" id=11]
[ext_resource path="res://Maps/assets/roof6.png" type="Texture" id=12]
[ext_resource path="res://Maps/assets/road1.png" type="Texture" id=13]
[ext_resource path="res://Maps/assets/sidewalk.png" type="Texture" id=14]
[ext_resource path="res://Maps/assets/road2.png" type="Texture" id=15]
[ext_resource path="res://Maps/assets/tree.png" type="Texture" id=16]
[ext_resource path="res://Maps/assets/rock.png" type="Texture" id=17]

[node name="MapEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WoodWallBtn" parent="VBoxContainer" instance=ExtResource( 6 )]

[node name="ConcreteWallBtn" parent="VBoxContainer" instance=ExtResource( 6 )]
margin_top = 54.0
margin_bottom = 104.0
texture_normal = ExtResource( 2 )
title = "Concrete Wall"

[node name="StoneWallBtn" parent="VBoxContainer" instance=ExtResource( 6 )]
margin_top = 108.0
margin_bottom = 158.0
texture_normal = ExtResource( 5 )
title = "StoneWall"

[node name="BricksWallBtn" parent="VBoxContainer" instance=ExtResource( 6 )]
margin_top = 162.0
margin_bottom = 212.0
texture_normal = ExtResource( 4 )
title = "BricksWall"

[node name="MetalWallBtn" parent="VBoxContainer" instance=ExtResource( 6 )]
margin_top = 216.0
margin_bottom = 266.0
texture_normal = ExtResource( 3 )
title = "MetalWall"

[node name="Roof1" parent="VBoxContainer" instance=ExtResource( 6 )]
margin_top = 270.0
margin_bottom = 320.0
texture_normal = ExtResource( 7 )
stretch_mode = 5
title = "Small Roof 1"

[node name="Roof2" parent="VBoxContainer" instance=ExtResource( 6 )]
margin_top = 324.0
margin_bottom = 374.0
texture_normal = ExtResource( 9 )
stretch_mode = 5
title = "Big Roof 1"

[node name="Roof3" parent="VBoxContainer" instance=ExtResource( 6 )]
margin_top = 378.0
margin_bottom = 428.0
texture_normal = ExtResource( 8 )
stretch_mode = 5
title = "Small Roof 2"

[node name="Roof4" parent="VBoxContainer" instance=ExtResource( 6 )]
margin_top = 432.0
margin_bottom = 482.0
texture_normal = ExtResource( 10 )
stretch_mode = 5
title = "Big Roof 2"

[node name="Roof5" parent="VBoxContainer" instance=ExtResource( 6 )]
margin_top = 486.0
margin_bottom = 536.0
texture_normal = ExtResource( 11 )
stretch_mode = 5
title = "Small Roof 3"

[node name="Roof6" parent="VBoxContainer" instance=ExtResource( 6 )]
margin_top = 540.0
margin_bottom = 590.0
texture_normal = ExtResource( 12 )
stretch_mode = 5
title = "Big Roof 3"

[node name="Road1" parent="VBoxContainer" instance=ExtResource( 6 )]
margin_top = 594.0
margin_bottom = 644.0
texture_normal = ExtResource( 13 )
stretch_mode = 5
title = "Road 1"

[node name="Road2" parent="VBoxContainer" instance=ExtResource( 6 )]
margin_top = 648.0
margin_bottom = 698.0
texture_normal = ExtResource( 15 )
stretch_mode = 5
title = "Road 2"

[node name="Sidewalk" parent="VBoxContainer" instance=ExtResource( 6 )]
margin_top = 702.0
margin_bottom = 752.0
texture_normal = ExtResource( 14 )
stretch_mode = 5
title = "Sidewalk"

[node name="Rock" parent="VBoxContainer" instance=ExtResource( 6 )]
margin_top = 756.0
margin_bottom = 806.0
texture_normal = ExtResource( 17 )
stretch_mode = 5
title = "Rock"

[node name="Tree" parent="VBoxContainer" instance=ExtResource( 6 )]
margin_top = 810.0
margin_bottom = 860.0
texture_normal = ExtResource( 16 )
stretch_mode = 5
title = "Tree"
[connection signal="pressed" from="VBoxContainer/WoodWallBtn" to="." method="_on_WoodWallBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/ConcreteWallBtn" to="." method="_on_ConcreteWallBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/StoneWallBtn" to="." method="_on_StoneWallBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/BricksWallBtn" to="." method="_on_BricksWallBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/MetalWallBtn" to="." method="_on_MetalWallBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/Roof1" to="." method="_on_Roof1_pressed"]
[connection signal="pressed" from="VBoxContainer/Roof2" to="." method="_on_Roof2_pressed"]
[connection signal="pressed" from="VBoxContainer/Roof3" to="." method="_on_Roof3_pressed"]
[connection signal="pressed" from="VBoxContainer/Roof4" to="." method="_on_Roof4_pressed"]
[connection signal="pressed" from="VBoxContainer/Roof5" to="." method="_on_Roof5_pressed"]
[connection signal="pressed" from="VBoxContainer/Roof6" to="." method="_on_Roof6_pressed"]
[connection signal="pressed" from="VBoxContainer/Road1" to="." method="_on_Road1_pressed"]
[connection signal="pressed" from="VBoxContainer/Road2" to="." method="_on_Road2_pressed"]
[connection signal="pressed" from="VBoxContainer/Sidewalk" to="." method="_on_Sidewalk_pressed"]
[connection signal="pressed" from="VBoxContainer/Rock" to="." method="_on_Rock_pressed"]
[connection signal="pressed" from="VBoxContainer/Tree" to="." method="_on_Tree_pressed"]
